# astrosim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  run.sh
cmake/: EmbedShaders.cmake
data/: bodies.toml
data/shaders/: frag_atmosphere.glsl  frag_body.glsl  frag_gasgiant.glsl  frag_grid.glsl  frag_marker.glsl  frag_solid.glsl  frag_sphere.glsl  frag_trajectory.glsl  frag_transmittance.glsl  vert_atmosphere.glsl  vert_body.glsl  vert_fullscreen.glsl  vert_gasgiant.glsl  vert_grid.glsl  vert_marker.glsl  vert_solid.glsl  vert_sphere.glsl  vert_trajectory.glsl
src/: main.cpp
src/gfx/: atmosphere.cpp  atmosphere.h  camera.cpp  camera.h  cmath.cpp  cmath.h  gfx_utils.h  graphics.cpp  graphics.h  grid.cpp  grid.h  marchingcubes.cpp  marchingcubes.h  markers.cpp  markers.h  proceduralmesh.cpp  proceduralmesh.h  shader.h  trajectories.cpp  trajectories.h
src/gfx/terrain/: terrain.cpp  terrain.h
src/sim/: body.cpp  body.h  qmath.h  starconfig.cpp  starsystem.cpp  starsystem.h  vmath.h
